<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home_foreground"
        android:title="@string/home" />
    <item
        android:id="@+id/camera"
        android:icon="@drawable/camera_foreground"
        android:title="@string/camera" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile_foreground"
        android:title="@string/profile" />
</menu>