<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/fragment_profile"
    tools:context=".authentication.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profile_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|top"
            android:background="@color/background"
            android:contentDescription="@string/settings"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@drawable/settings_foreground" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/logout_button"
            style="@style/CustomButton"
            android:layout_gravity="bottom"
            android:layout_margin="30dp"
            android:tag="logout_button"
            android:text="@string/log_out" />
    </RelativeLayout>
</FrameLayout>